<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="description">Git server over SSH for Android based on Gidder</string>
    <string name="hello">Hello World, GitrepoActivity!</string>
    <string name="app_name">Gitrepo</string>
    <string name="add_user_fullname">Full name</string>
    <string name="add_user_email">E-Mail</string>
    <string name="add_user_username">Username</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="add_user_password">Password</string>
    <string name="add_user_publickey">Public Key</string>
    <string name="add_repository_name">Name</string>
    <string name="add_repository_mapping">Mapping</string>
    <string name="add_repository_description">Description</string>
    <string name="btn_edit">Edit</string>
    <string name="add_user_title">Add new user</string>
    <string name="add_user_edittitle">Edit user</string>
    <string name="add_user_activate">Activate user</string>
    <string name="btn_add_user">Add user</string>
    <string name="btn_add_repository">Add repository</string>
    <string name="add_repository_title">Add repository</string>
    <string name="add_repository_edittitle">Edit repository</string>
    <string name="action_popup_edit">Edit</string>
    <string name="action_popup_delete">Delete</string>
    <string name="action_popup_activate">Activate</string>
    <string name="action_popup_deactivate">Deactivate</string>
    <string name="btn_done">Done</string>
    <string name="repository_permissions_item_pull">Pull</string>
    <string name="repository_permissions_item_push">Push</string>
    <string name="click_to_disable">Click to disable</string>
    <string name="click_to_enable">Click to enable</string>
    <string name="settings_git_repositories_directory">Git repositories directory</string>
    <string name="settings_ssh_server_port">SSH server port</string>
    <string name="settings_start_on_boot">Start SSH server on boot</string>
    <string name="dns_provider_title">Choose DNS provider</string>
    <string-array name="dns_providers">
        <item>DynDNS.com</item>
        <item>No-Ip.com</item>
    </string-array>
    <string name="show_password">Show password</string>
    <string name="dns_password">Password</string>
    <string name="dns_username">Username</string>
    <string name="dns_domain_name">Domain Name</string>
    <string name="dns_provider">Provider</string>
    <string name="dns_activate">Activate Dynamic DNS service</string>
    <string name="dns_deactivate">Deactivate Dynamic DNS service</string>
    <string name="btn_save">Save</string>
    <string name="repositories_no_repositories_label">No repositories</string>
    <string name="users_no_users_label">No users</string>
    <string name="use_contact">Use contact</string>
    <string name="home_start">Start</string>
    <string name="dialog_pick_e_mail_address">Pick e-mail address</string>
    <string name="user_details">User details</string>
    <string name="no_repositories">No repositories</string>
    <string name="add_permission">Add permission</string>
    <string name="no_permissions">No permissions</string>
    <string name="permissions">Permissions</string>
    <string name="edit">Edit</string>
    <string name="activate">Activate</string>
    <string name="delete">Delete</string>
    <string name="repository_details">Repository details</string>
    <string name="no_users">No users</string>
    <string name="add_repository_activate">Activate repository</string>
    <string name="server_settings">Server Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="email_log">Email Log</string>
    <string name="email">gmkbenjamin@users.noreply.github.com</string>
    <string name="debug_log">Debug Log</string>
    <string name="no_email_client">Cannot find an email client</string>
    <string name="updates"></string>
    <string name="repo_backup">Backup Repository</string>

</resources>